Overflow hidden for border radius, body background, correct ul in html

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@ body {
     flex-flow: column wrap;
     align-items: center;
     justify-content: center;
+    background-color: #e6eff6;
     font-family: "Karla";
     min-height: 100vh;
 }
@@ -31,13 +32,19 @@ p {
 
 .content-wrapper {
     display: grid;
-    border-radius: 5px;
+    border-radius: 8px;
     box-shadow: -3px 10px 14px 8px #dddce1;
+    /***** Child background overflows grid *****/
+    overflow: hidden;
     width: 310px;
 }
 
 .content-wrapper div {
     padding: 15px 20px;
+}
+
+.content-wrapper .join {
+    background-color: #FFFFFF;
 }
 
 .content-wrapper .join p {
@@ -76,6 +83,7 @@ p {
     box-shadow: -3px 10px 14px 8px #26a2a0;
     color: white;
     display: block;
+    /***** focus-visible: *****/
     margin-bottom: .625rem;
     margin-top: 1.5rem;
     padding: 14px 100px;
